k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-service
  labels:
    app: ping
spec:
  selector:
    app: ping
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
