k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ping-ingress
  labels:
    app: ping
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - ping.corynorris.me
      secretName: ping-tls
  rules:
    - host: ping.corynorris.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ping-service
                port:
                  number: 80
